--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,11 @@
     --primary-color: #0f1b4c;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -52,8 +57,19 @@ a {
 }
 
 /* Header */
-.header {
-    height: 100vh;
+
+.fixed-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
+    display: flex;
+    align-items: center;
+    height: calc(100vh - 90px);
     background: #e6f0ff;
     position: relative;
 }
@@ -61,7 +77,7 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -100,15 +116,11 @@ a {
 }
 
 /* Hero */
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -116,7 +128,7 @@ a {
     color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
     font-weight: 700;
     font-size: 6.4rem;
     line-height: 1.19;
@@ -124,7 +136,7 @@ a {
     margin-top: 8px;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin-top: 30px;
     font-weight: 400;
     font-size: 1.8rem;
@@ -164,11 +176,23 @@ a {
     margin-top: 23px;
 }
 
-.images {
+.clients .images {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 96px;
+    margin-top: 70px;
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    height: 90px;
+    padding: 0 42px;
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 /* Guides */
@@ -600,6 +624,11 @@ a {
     width: 28px;
     height: 28px;
     border-radius: 5px;
+    background: #f9f9f9;
+}
+
+.footer .social-link + .social-link {
+    margin-left: 16px;
 }
 
 .footer .social-link:hover {
@@ -615,5 +644,5 @@ a {
 .footer .copyright {
     font-weight: 400;
     font-size: 1.4rem;
-    color: #C2C2C2;
+    color: #c2c2c2;
 }
