--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,7 +57,6 @@ a {
 }
 
 /* Header */
-
 .fixed-header {
     background: #e6f0ff;
     padding-top: 26px;
@@ -316,7 +315,8 @@ a {
 
 .featured .list {
     margin-top: 70px;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
     gap: 30px;
 }
 
